--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
-  <title>Welcome to CRIS BPO</title>
+  <title>responsive_layout</title>
   <link rel="manifest" href="manifest.json">
 
   <script>
     // The value below is injected by flutter build, do not touch.
-    var serviceWorkerVersion = '3931504010';
+    var serviceWorkerVersion = '3631141118';
   </script>
   <!-- This script adds the flutter initialization JS code -->
   <script src="flutter.js" defer></script>
