--- a/index.html
+++ b/index.html
@@ -29,22 +29,18 @@
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
-  <title>Welcome To CRIS BPO</title>
+  <title>responsive_layout</title>
   <link rel="manifest" href="manifest.json">
 
   <script>
     // The value below is injected by flutter build, do not touch.
-    var serviceWorkerVersion = '3631141118';
+    var serviceWorkerVersion = '1492759810';
   </script>
   <!-- This script adds the flutter initialization JS code -->
   <script src="flutter.js" defer></script>
 </head>
 <body>
   <script>
-    window.addEventListener('beforeinstallprompt', function (e) {
-    e.preventDefault();
-    return false;
-});
     window.addEventListener('load', function(ev) {
       // Download main.dart.js
       _flutter.loader.loadEntrypoint({
