Icon fix and refactor
Fixed icons and downloading app issue.

--- a/index.html
+++ b/index.html
@@ -29,18 +29,22 @@
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
-  <title>Welcome to CRIS BPO</title>
+  <title>CRIS BPO</title>
   <link rel="manifest" href="manifest.json">
 
   <script>
     // The value below is injected by flutter build, do not touch.
-    var serviceWorkerVersion = '3162188146';
+    var serviceWorkerVersion = '3983417972';
   </script>
   <!-- This script adds the flutter initialization JS code -->
   <script src="flutter.js" defer></script>
 </head>
 <body>
   <script>
+    window.addEventListener('beforeinstallprompt', function (e) {
+    e.preventDefault();
+    return false;
+});
     window.addEventListener('load', function(ev) {
       // Download main.dart.js
       _flutter.loader.loadEntrypoint({
